[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation and solving library with DFS for generation and BFS for pathfinding"
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    {name = "Mohamed Amhouch"},
    {name = "Ilyas Bouelbaraka"},
]
